--- a/src/main/resources/templates/dashboard/changePassword.html
+++ b/src/main/resources/templates/dashboard/changePassword.html
@@ -87,6 +87,7 @@
 												<div class="form-group">
 													<div class="col-sm-offset-4 col-sm-8">
 												    	<button type="submit" class="btn btn-success">Submit</button>
+												    	<a th:href="@{/settings/user/{id}/profile(id=${user.id})}"><button type="button" class="btn btn-warning">Cancel</button></a>
 												    </div>
 												</div>
 											</form> 
