--- a/src/main/resources/templates/dashboard/index.html
+++ b/src/main/resources/templates/dashboard/index.html
@@ -13,92 +13,43 @@
 			<div id="wrapper">
 				<nav class="navbar-default navbar-side" role="navigation">
 					<div class="sidebar-collapse">
-						<div th:replace="dashboard/leftNavbar :: navbar">Left nav bar</div>
-						<hr/>
-						<div th:with="currentUser=${#httpServletRequest.userPrincipal?.name}">
+						<div th:replace="dashboard/leftNavbar :: navbar">Left nav
+							bar</div>
+						<hr />
+						<div
+							th:with="currentUser=${#httpServletRequest.userPrincipal?.name}">
 							<div th:if="${currentUser!=null}">
-				    			<ul class="nav navbar-nav navbar-right">
-									<li><a th:href="@{/user}"><i class="fa fa-user" aria-hidden="true"></i>
-									<span th:text="${currentUser}"></span></a></li>
-									<li><a th:href="@{/logout}"><i class="fa fa-sign-out" aria-hidden="true"></i>Logout</a></li>
-						    	</ul>
+								<ul class="nav navbar-nav navbar-right">
+									<li><a th:href="@{/user}"><i class="fa fa-user"
+											aria-hidden="true"></i> <span th:text="${currentUser}"></span></a></li>
+									<li><a th:href="@{/logout}"><i class="fa fa-sign-out"
+											aria-hidden="true"></i>Logout</a></li>
+								</ul>
 							</div>
 						</div>
 					</div>
 				</nav>
-				
+
 				<!-- /. NAV SIDE  -->
-	
+
 				<div id="page-wrapper">
 					<div id="page-inner">
 						<div class="row">
 							<div class="col-sm-4">
-								<h2>DASHBOARD</h2><span th:text="${session.foo}"></span>
+								<h2>DASHBOARD</h2>
 							</div>
 						</div>
 						<!-- /. ROW  -->
 						<hr />
-						
+
 						<!-- /. ROW  -->
 						<div class="row text-center pad-top">
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
+							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6"
+								sec:authorize="isAuthenticated()">
 								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-circle-o-notch fa-5x"></i>
-										<h4>Check Data</h4>
-									</a>
-								</div>
-							</div>
 
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-envelope-o fa-5x"></i>
-										<h4>Mail Box</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-lightbulb-o fa-5x"></i>
-										<h4>New Issues</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-users fa-5x"></i>
-										<h4>See Users</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-key fa-5x"></i>
-										<h4>Admin</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-comments-o fa-5x"></i>
-										<h4>Support</h4>
-									</a>
-								</div>
-							</div>
-						</div>
-						<!-- /. ROW  -->
-						<div class="row text-center pad-top">
-
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-clipboard fa-5x"></i>
-										<h4>All Docs</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6" sec:authorize="isAuthenticated()">
-								<div class="div-square">
-								
-									<a th:href="@{/settings/user/{id}/profile(id=${userId})}"> <i class="fa fa-gear fa-5x"></i>
+									<a th:href="@{/settings/user/{id}/profile(id=${userId})}">
+										<i class="fa fa-gear fa-5x"></i>
 										<h4>Settings</h4>
 									</a>
 								</div>
@@ -117,63 +68,10 @@
 									</a>
 								</div>
 							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-rocket fa-5x"></i>
-										<h4>Launch</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-user fa-5x"></i>
-										<h4>Register User</h4>
-									</a>
-								</div>
-							</div>
-						</div>
-						<!-- /. ROW  -->
-						<div class="row text-center pad-top">
-
 							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
 								<div class="div-square">
 									<a href="blank.html"> <i class="fa fa-user fa-5x"></i>
 										<h4>Profile</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-gear fa-5x"></i>
-										<h4>Settings</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-wechat fa-5x"></i>
-										<h4>Live Talk</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-bell-o fa-5x"></i>
-										<h4>Notifications</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-rocket fa-5x"></i>
-										<h4>Launch</h4>
-									</a>
-								</div>
-							</div>
-							<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-								<div class="div-square">
-									<a href="blank.html"> <i class="fa fa-user fa-5x"></i>
-										<h4>Register User</h4>
 									</a>
 								</div>
 							</div>
@@ -183,7 +81,6 @@
 				</div>
 				<!-- /. PAGE WRAPPER  -->
 			</div>
-
 		</section>
 	</div>
 	<!-- 
