--- a/src/main/resources/templates/dashboard/leftNavbar.html
+++ b/src/main/resources/templates/dashboard/leftNavbar.html
@@ -1,14 +1,32 @@
 <div th:fragment="navbar">
 	<ul class="nav" id="main-menu">
 		<li><a th:href="@{/dashboard}"><i class="fa fa-desktop"></i>Dashboard</a></li>
-		<li sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/admin}"><i class="fa fa-key "></i>Admin<span class="badge">Included</span></a></li>
-		<li sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/resume}"><i class="fa fa-bar-chart-o"></i>Resume</a></li>
-		<li sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/category/all}"><i class="fa fa-table "></i>Category</a></li>
-		<li sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/contact/all}"><i class="fa fa fa-comments"></i>Contact Message</a></li>
-	
+		<li sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/admin}"><i
+				class="fa fa-key "></i>Admin<span class="badge">Included</span></a></li>
+		<li sec:authorize="hasAuthority('ADMIN')"><a th:href="@{/resume}"><i
+				class="fa fa-bar-chart-o"></i>Resume</a></li>
+		<li sec:authorize="hasAuthority('ADMIN')"><a
+			th:href="@{/category/all}"><i class="fa fa-table "></i>Category</a></li>
+		<li sec:authorize="hasAuthority('ADMIN')"><a
+			th:href="@{/contact/all}"><i class="fa fa fa-comments"></i>Contact
+				Message</a></li>
+
 		<li><a th:href="@{/project}"><i class="fa fa-edit "></i>Project</a></li>
 		<li><a th:href="@{/blog/all}"><i class="fa fa-book "></i>Blog</a></li>
-		<li><a th:href="@{'/settings/user/'+${session.userId}+'/profile'}" th:unless="${session==null}"><i class="fa fa-gear"></i>Settings</a></li>
+		<li><a
+			th:href="@{'/settings/user/'+${session.userId}+'/profile'}"
+			th:unless="${session==null}"><i class="fa fa-gear"></i>Settings</a></li>
 	</ul>
+	<hr />
+	<div th:with="currentUser=${#httpServletRequest.userPrincipal?.name}">
+		<div th:if="${currentUser!=null}">
+			<ul class="nav navbar-nav navbar-right">
+				<li><a th:href="@{/user}"><i class="fa fa-user"
+						aria-hidden="true"></i> <span th:text="${currentUser}"></span></a></li>
+				<li><a th:href="@{/logout}"><i class="fa fa-sign-out"
+						aria-hidden="true"></i>Logout</a></li>
+			</ul>
+		</div>
+	</div>
 </div>
 
