--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,44 +7,73 @@
 </head>
 <body>
 	<div layout:fragment="content">
-		<div class="container" style="width:100%">
+		<div class="container" style="width: 100%">
 			<div class="row">
-					<div class="col-sm-6">
-						<p>Your current time is <strong><span th:text="${currentUserTime}"></span></strong></p>
-					</div>
-					<div class="col-sm-6">
-						<p class="pull-right">You are greeted with respect to your current time.</p>
-					</div>
+				<div class="col-sm-6">
+					<p>
+						Your current time is <strong><span
+							th:text="${currentUserTime}"></span></strong>
+					</p>
 				</div>
+				<div class="col-sm-6">
+					<p class="pull-right">You are greeted with respect to your
+						current time.</p>
+				</div>
+			</div>
 			<div class="greetings text-center">
 				<div id="mycarousel" class="carousel slide" data-ride="carousel">
 					<div class="carousel-inner">
 						<div class="item active">
 							<div th:if="${goodMorning}">
-								<img th:src="@{/image/morning.jpg}" class="center-block img-responsive hidden-sm hidden-xs" alt="Greetings from Buddhi Bal Thapa" />
-								<img th:src="@{/image/morning640x360.jpg}" class="center-block img-responsive hidden-md hidden-lg" alt="Greetings from Buddhi Bal Thapa" />
-								<div class="carousel-caption greeting-text">Good morning! Have a great day.</div>
+								<img th:src="@{/image/morning.jpg}"
+									class="center-block img-responsive hidden-sm hidden-xs"
+									alt="Greetings from Buddhi Bal Thapa" /> <img
+									th:src="@{/image/morning640x360.jpg}"
+									class="center-block img-responsive hidden-md hidden-lg"
+									alt="Greetings from Buddhi Bal Thapa" />
+								<div class="carousel-caption greeting-text">Good morning!
+									Have a great day.</div>
 							</div>
 
 							<div th:if="${goodAfternoon}">
-								<img th:src="@{/image/afternoon.jpg}" class="center-block img-responsive hidden-sm hidden-xs" alt="Greetings from Buddhi Bal Thapa" />
-								<img th:src="@{/image/afternoon640x360.jpg}" class="center-block img-responsive hidden-md hidden-lg" alt="Greetings from Buddhi Bal Thapa" />
-								<div class="carousel-caption greeting-text">Good afternoon! How is your day today? Time for coffee?</div>
+								<img th:src="@{/image/afternoon.jpg}"
+									class="center-block img-responsive hidden-sm hidden-xs"
+									alt="Greetings from Buddhi Bal Thapa" /> <img
+									th:src="@{/image/afternoon640x360.jpg}"
+									class="center-block img-responsive hidden-md hidden-lg"
+									alt="Greetings from Buddhi Bal Thapa" />
+								<div class="carousel-caption greeting-text">Good
+									afternoon! How is your day today? Time for coffee?</div>
 							</div>
 							<div th:if="${goodEvening}">
-								<img th:src="@{/image/evening.jpg}" class="center-block img-responsive hidden-sm hidden-xs" alt="Greetings from Buddhi Bal Thapa" />
-								<img th:src="@{/image/evening640x360.jpg}" class="center-block img-responsive hidden-md hidden-lg" alt="Greetings from Buddhi Bal Thapa" />
-								<div class="carousel-caption greeting-text">Good evening! Time for some snacks?</div>
+								<img th:src="@{/image/evening.jpg}"
+									class="center-block img-responsive hidden-sm hidden-xs"
+									alt="Greetings from Buddhi Bal Thapa" /> <img
+									th:src="@{/image/evening640x360.jpg}"
+									class="center-block img-responsive hidden-md hidden-lg"
+									alt="Greetings from Buddhi Bal Thapa" />
+								<div class="carousel-caption greeting-text">Good evening!
+									Time for some snacks?</div>
 							</div>
 							<div th:if="${goodNight}">
-								<img th:src="@{/image/night.jpg}" class="center-block img-responsive hidden-sm hidden-xs" alt="Greetings from Buddhi Bal Thapa" />
-								<img th:src="@{/image/night640x360.jpg}" class="center-block img-responsive hidden-md hidden-lg" alt="Greetings from Buddhi Bal Thapa" />
-								<div class="carousel-caption greeting-text">Hope you had a great day today. Good night, time to sleep</div>
+								<img th:src="@{/image/night.jpg}"
+									class="center-block img-responsive hidden-sm hidden-xs"
+									alt="Greetings from Buddhi Bal Thapa" /> <img
+									th:src="@{/image/night640x360.jpg}"
+									class="center-block img-responsive hidden-md hidden-lg"
+									alt="Greetings from Buddhi Bal Thapa" />
+								<div class="carousel-caption greeting-text">Hope you had a
+									great day today. Good night, time to sleep</div>
 							</div>
 							<div th:if="${midNight}">
-								<div class="carousel-caption greeting-text">Wow! You still awake?</div>
-								<img th:src="@{/image/midnight.jpg}" class="center-block img-responsive hidden-sm hidden-xs" alt="Greetings from Buddhi Bal Thapa" />
-								<img th:src="@{/image/midnight640x360.jpg}" class="center-block img-responsive hidden-md hidden-lg" alt="Greetings from Buddhi Bal Thapa" />
+								<div class="carousel-caption greeting-text">Wow! You still
+									awake?</div>
+								<img th:src="@{/image/midnight.jpg}"
+									class="center-block img-responsive hidden-sm hidden-xs"
+									alt="Greetings from Buddhi Bal Thapa" /> <img
+									th:src="@{/image/midnight640x360.jpg}"
+									class="center-block img-responsive hidden-md hidden-lg"
+									alt="Greetings from Buddhi Bal Thapa" />
 							</div>
 						</div>
 					</div>
