--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,113 +1,141 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" 
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<meta name="description" content="This is the personal blog of Buddhi Bal Thapa. I write stuff about programming 
+<meta name="viewport"
+	content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+<meta name="description"
+	content="This is the personal blog of Buddhi Bal Thapa. I write stuff about programming 
 	and technologies while in the process of learning something new and about the stuff I've learnt. I also write stuff 
 	that are not related to programming." />
-	<meta name="msvalidate.01" content="434FCA1947534BA3EB04E8CA14CCAD84" />
-	<title layout:title-pattern="$CONTENT_TITLE :: $DECORATOR_TITLE">Buddhi Bal Thapa</title>
-	<link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css}"
-		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-		crossorigin="anonymous" />
-	<link rel="stylesheet" th:href="@{/css/site.css}" media="screen" />
-	
-	<link rel="stylesheet" th:href="@{https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css}" />
-	<link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.4/sweetalert2.min.css}" />
-	<link rel="stylesheet" th:href="@{http://fonts.googleapis.com/css?family=Open+Sans}" type="text/css" />
-	<!-- Global Site Tag (gtag.js) - Google Analytics -->
-	<script async="async" src="https://www.googletagmanager.com/gtag/js?id=UA-40696634-2"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments)};
-	  gtag('js', new Date());
-	
-	  gtag('config', 'UA-40696634-2');
-	</script>
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+<meta name="msvalidate.01" content="434FCA1947534BA3EB04E8CA14CCAD84" />
+<title layout:title-pattern="$CONTENT_TITLE :: $DECORATOR_TITLE">Buddhi
+	Bal Thapa</title>
+<link rel="stylesheet"
+	th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css}"
+	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+	crossorigin="anonymous" />
+<link rel="stylesheet" th:href="@{/css/site.css}" media="screen" />
 
-  		ga('create', 'UA-40696634-2', 'auto');
- 		ga('send', 'pageview');
+<link rel="stylesheet"
+	th:href="@{https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css}" />
+<link rel="stylesheet"
+	th:href="@{https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.4/sweetalert2.min.css}" />
+<link rel="stylesheet"
+	th:href="@{http://fonts.googleapis.com/css?family=Open+Sans}"
+	type="text/css" />
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async="async"
+	src="https://www.googletagmanager.com/gtag/js?id=UA-40696634-2"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag() {
+		dataLayer.push(arguments)
+	};
+	gtag('js', new Date());
 
-	</script>
-	
+	gtag('config', 'UA-40696634-2');
+</script>
+<script>
+	(function(i, s, o, g, r, a, m) {
+		i['GoogleAnalyticsObject'] = r;
+		i[r] = i[r] || function() {
+			(i[r].q = i[r].q || []).push(arguments)
+		}, i[r].l = 1 * new Date();
+		a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+		a.async = 1;
+		a.src = g;
+		m.parentNode.insertBefore(a, m)
+	})(window, document, 'script',
+			'https://www.google-analytics.com/analytics.js', 'ga');
+
+	ga('create', 'UA-40696634-2', 'auto');
+	ga('send', 'pageview');
+</script>
+
 </head>
 <body>
 	<div class="content">
 		<div sec:authorize="isAuthenticated()" class="navbar navbar-inverse">
-			 <div class="container-fluid">
-    			<div class="navbar-header">
-    				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-collapse">
-					<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse"
+						data-target=".sidebar-collapse">
+						<span class="icon-bar"></span><span class="icon-bar"></span><span
+							class="icon-bar"></span>
 					</button>
-      				<a class="navbar-brand" th:href="@{/}"><i class="fa fa-home fa-2x" aria-hidden="true"></i></a>
-			   	</div>
-						
-			  	<div class="sidebar-collapse navbar-collapse collapse">
-					<ul class="nav navbar-nav navbar-right">
-						<li><a th:href="@{/dashboard}"><i class="fa fa-tachometer" aria-hidden="true"></i>&nbsp;Dashboard</a></li>
-				   	</ul>
+					<a class="navbar-brand" th:href="@{/}"><i
+						class="fa fa-home fa-2x" aria-hidden="true"></i></a>
 				</div>
-					
-		  	</div>
-		</div>		
+
+				<div class="sidebar-collapse navbar-collapse collapse">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a th:href="@{/dashboard}"><i
+								class="fa fa-tachometer" aria-hidden="true"></i>&nbsp;Dashboard</a></li>
+					</ul>
+				</div>
+
+			</div>
+		</div>
 
 		<header sec:authorize="isAnonymous()">
 			<nav class="navbar navbar-inverse">
 				<div class="container-fluid">
 					<div class="navbar-header">
-						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+						<button type="button" class="navbar-toggle collapsed"
+							data-toggle="collapse" data-target="#navbar"
 							aria-expanded="false" aria-controls="navbar">
 							<span class="sr-only">Toggle navigation</span> <span
 								class="icon-bar"></span> <span class="icon-bar"></span> <span
 								class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand home-logo" th:href="@{/}"><i class="fa fa-home fa-2x" aria-hidden="true"></i></a>
+						<a class="navbar-brand home-logo" th:href="@{/}"><i
+							class="fa fa-home fa-2x" aria-hidden="true"></i></a>
 					</div>
 					<div id="navbar" class="navbar-collapse collapse">
 						<ul class="nav navbar-nav">
 							<li><a th:href="@{/resume}">Resume</a></li>
-							<li><a th:href="@{/project}">Project</a></li>
+							<!-- 	<li><a th:href="@{/project}">Project</a></li> -->
 
-							<li class="dropdown">
-								<a class="dropdown-toggle" th:href="@{/blog/all}" data-toggle="dropdown" role="button" 
-								aria-haspopup="true" aria-expanded="false" >
-									Blog<span class="caret"></span>
-								</a>
+							<li class="dropdown"><a class="dropdown-toggle"
+								th:href="@{/blog/all}" data-toggle="dropdown" role="button"
+								aria-haspopup="true" aria-expanded="false"> Blog<span
+									class="caret"></span>
+							</a>
 								<ul class="dropdown-menu">
-									<li><a sec:authorize="hasAuthority('ADMIN')" th:href="@{/blog/new}" th:text="#{blog.new}"></a></li>
+									<li><a sec:authorize="hasAuthority('ADMIN')"
+										th:href="@{/blog/new}" th:text="#{blog.new}"></a></li>
 									<li><a th:href="@{/blog/all}" th:text="#{blog.all}">CSS</a></li>
-								</ul>
-							
-							</li>
-							
+								</ul></li>
+
 							<li><a th:href="@{/contact}">Contact</a></li>
 
 							<li class="dropdown" sec:authorize="hasAuthority('ADMIN')">
-								<a class="dropdown-toggle" th:href="@{#}" data-toggle="dropdown" role="button" 
-								aria-haspopup="true" aria-expanded="false" >
+								<a class="dropdown-toggle" th:href="@{#}" data-toggle="dropdown"
+								role="button" aria-haspopup="true" aria-expanded="false">
 									Category<span class="caret"></span>
-								</a>
+							</a>
 								<ul class="dropdown-menu">
-									<li><a th:href="@{/category/new}" th:text="#{category.new}"></a></li>
-									<li><a th:href="@{/category/all}" th:text="#{category.all}">CSS</a></li>
+									<li><a th:href="@{/category/new}"
+										th:text="#{category.new}"></a></li>
+									<li><a th:href="@{/category/all}"
+										th:text="#{category.all}">CSS</a></li>
 								</ul>
 							</li>
 
 						</ul>
-						<div th:with="currentUser=${#httpServletRequest.userPrincipal?.name}">
+						<div
+							th:with="currentUser=${#httpServletRequest.userPrincipal?.name}">
 							<div th:if="${currentUser!=null}">
 								<ul class="nav navbar-nav navbar-right">
-									<li><a th:href="@{/dashboard}"><i class="fa fa-tachometer" aria-hidden="true"></i>&nbsp;Dashboard</a></li>
-									<li><a th:href="@{/user}"><i class="fa fa-user" aria-hidden="true"></i>&nbsp; <span
-											th:text="${currentUser}"></span></a></li>
+									<li><a th:href="@{/dashboard}"><i
+											class="fa fa-tachometer" aria-hidden="true"></i>&nbsp;Dashboard</a></li>
+									<li><a th:href="@{/user}"><i class="fa fa-user"
+											aria-hidden="true"></i>&nbsp; <span th:text="${currentUser}"></span></a></li>
 									<!-- <li><a th:href="@{/login}"><i class="fa fa-sign-in" aria-hidden="true"></i>&nbsp;Login</a></li> -->
-									<li><a th:href="@{/logout}"><i class="fa fa-sign-out" aria-hidden="true"></i>&nbsp;Logout</a></li>
+									<li><a th:href="@{/logout}"><i class="fa fa-sign-out"
+											aria-hidden="true"></i>&nbsp;Logout</a></li>
 								</ul>
 							</div>
 						</div>
@@ -117,93 +145,101 @@
 				<!--/.container-fluid -->
 			</nav>
 		</header>
-			<div class="row" id="main-content-box">
-				<section layout:fragment="content">
-					<div layout:fragment="share-this"></div>
-					<p>Page content goes here</p>
-					<div layout:fragment="share-this"></div>
-				</section>
-			</div>
-			<div layout:fragment="comment"></div>
-			<div layout:fragment="player"></div>
+		<div class="row" id="main-content-box">
+			<section layout:fragment="content">
+				<div layout:fragment="share-this"></div>
+				<p>Page content goes here</p>
+				<div layout:fragment="share-this"></div>
+			</section>
+		</div>
+		<div layout:fragment="comment"></div>
+		<div layout:fragment="player"></div>
+
+
 	</div>
-	
-	<footer class="footer">
-		<div class="container">
-			<div layout:fragment="custom-footer">
-				<div class="row footer-content">
-					<div class="col-sm-4 hidden-xs">
-						<ul>
-							<li><a th:href="@{/resume}">Resume</a></li>
-							<li><a th:href="@{/project}">Project</a></li>
-							<li><a th:href="@{/blog/all}">Blog</a></li>
-						</ul>
-					</div>
-					<div class="col-sm-4">
-						<ul>
-							<li>Buddhi Bal Thapa</li>
-							<li>budthapa@gmail.com</li>
-							<li>+971 50 860 9904</li>
-						</ul>
-					</div>
-					<div class="col-sm-4 hidden-xs">
-						<ul>
-							<li><a th:href="@{https://github.com/budthapa}" target="_blank">github</a></li>
-							<li><a href="">linkedin</a></li>
-							<li><a href="">twitter</a></li>
-						</ul>
+		<footer class="footer">
+			<div class="container">
+				<div layout:fragment="custom-footer">
+					<div class="row footer-content">
+						<div class="col-sm-4 hidden-xs">
+							<ul>
+								<li><a th:href="@{/resume}">Resume</a></li>
+								<li><a th:href="@{/project}">Project</a></li>
+								<li><a th:href="@{/blog/all}">Blog</a></li>
+							</ul>
+						</div>
+						<div class="col-sm-4">
+							<ul>
+								<li>Buddhi Bal Thapa</li>
+								<li>budthapa@gmail.com</li>
+								<li>+971 50 860 9904</li>
+							</ul>
+						</div>
+						<div class="col-sm-4 hidden-xs">
+							<ul>
+								<li><a th:href="@{https://github.com/budthapa}"
+									target="_blank">github</a></li>
+								<li><a href="">linkedin</a></li>
+								<li><a href="">twitter</a></li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</footer>
+		</footer>
 	<script th:src="@{https://code.jquery.com/jquery-3.2.1.min.js}"
-		integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous">
+		integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+		crossorigin="anonymous">
+		
 	</script>
 	<script th:src="@{https://code.jquery.com/ui/1.12.1/jquery-ui.min.js}"
-			  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+		integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+		crossorigin="anonymous"></script>
 	<script
 		th:src="@{https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js}"
 		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
 		crossorigin="anonymous">
+		
 	</script>
 	<script
 		th:src="@{https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=167sq66d9ziwmz72cf7lwhrmcz4fetfkcx5syxgvoou9ywpw}"></script>
 	<script>
-	tinymce.init({
-		  selector: 'textarea',
-		  height: 500,
-		  theme: 'modern',
-		  plugins: [
-		    'advlist autolink lists link image charmap print preview hr anchor pagebreak',
-		    'searchreplace wordcount visualblocks visualchars code fullscreen',
-		    'insertdatetime media nonbreaking save table contextmenu directionality',
-		    'emoticons template paste textcolor colorpicker textpattern imagetools codesample toc'
-		  ],
-		  toolbar1: 'undo redo | insert | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image',
-		  toolbar2: 'print preview media | forecolor backcolor emoticons | codesample',
-		  image_advtab: true,
-		  templates: [
-		    { title: 'Test template 1', content: 'Test 1' },
-		    { title: 'Test template 2', content: 'Test 2' }
-		  ],
-		  image_dimensions: false,
-	         image_class_list: [
-	            {title: 'Responsive', value: 'img-responsive'}
-	        ]
-		 });
-	
-	
-
+		tinymce
+				.init({
+					selector : 'textarea',
+					height : 500,
+					theme : 'modern',
+					plugins : [
+							'advlist autolink lists link image charmap print preview hr anchor pagebreak',
+							'searchreplace wordcount visualblocks visualchars code fullscreen',
+							'insertdatetime media nonbreaking save table contextmenu directionality',
+							'emoticons template paste textcolor colorpicker textpattern imagetools codesample toc' ],
+					toolbar1 : 'undo redo | insert | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image',
+					toolbar2 : 'print preview media | forecolor backcolor emoticons | codesample',
+					image_advtab : true,
+					templates : [ {
+						title : 'Test template 1',
+						content : 'Test 1'
+					}, {
+						title : 'Test template 2',
+						content : 'Test 2'
+					} ],
+					image_dimensions : false,
+					image_class_list : [ {
+						title : 'Responsive',
+						value : 'img-responsive'
+					} ]
+				});
 	</script>
 
 	<script th:src="@{https://use.fontawesome.com/acd9b24c0b.js}"></script>
 	<script
 		th:src="@{https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js}"></script>
-	<script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.4/sweetalert2.min.js}"></script>
+	<script
+		th:src="@{https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.4/sweetalert2.min.js}"></script>
 	<script src='https://www.google.com/recaptcha/api.js'></script>
 	<script th:src="@{/js/site.js}"></script>
-	<script th:src="@{/js/dashboard.js}"></script>	
+	<script th:src="@{/js/dashboard.js}"></script>
 </body>
 </html>
 
