remove personal contact number

--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -94,11 +94,9 @@
 						</legend>
 						<address>
 							<strong>Buddhi Bal Thapa</strong><br /> Al Rigga, Dubai<br /> 
-							<abbr title="Phone"> P:</abbr>
-							+971 50 860 9904
 						</address>
 						<address>
-							<a href="mailto:budthapa@gmail.com">budthapa@gmail.com</a>
+							<abbr title="Email"> Email:</abbr> <a href="mailto:budthapa@gmail.com">budthapa@gmail.com</a>
 						</address>
 					</form>
 				</div>
