--- a/src/main/resources/static/css/site.css
+++ b/src/main/resources/static/css/site.css
@@ -7,6 +7,7 @@ html, body {
 	margin: 0;
 	font-size: 14px;
 	min-height: 100%;
+	font-family: 'Open Sans', sans-serif;
 	/* 	line-height: 24px; */
 }
 
@@ -158,6 +159,7 @@ a {
 .title-heading {
 	font-weight: bold;
 	font-size: xx-large;
+	font-family: 'Montserrat', sans-serif;
 }
 
 .published-on {
@@ -217,26 +219,41 @@ a {
 	margin-bottom: -20px;
 }
 
-/* langing page starts */
-.greeting-text {
-	font-size: 2em;
-	background-color: rgba(30, 83, 31, 0.5);
+/* langing page starts */ti
+
+.author{
+	font-style: italic;
 }
 
+.published-date{
+	color: #a29f9f;
+}
+
+
+
+
 @media screen and (min-width:1500px) {
+	.greeting-text {
+		font-size: 2.6em;
+		background-color: rgba(30, 83, 31, 0.5);
+	}
 	.container {
 		min-width: auto;
 	}
 }
 
 @media screen and (min-width:1200px) {
+	.greeting-text {
+		font-size: 1.8em;
+		background-color: rgba(30, 83, 31, 0.5);
+	}
 	.container {
 		min-width: 1352px;
 	}
 }
 
 }
-@media screen and (max-width : 480px) {
+@media screen and (max-width : 320px) {
 	.greeting-text {
 		font-size: 1.3em !important;
 	}
@@ -247,8 +264,8 @@ a {
 }
 
 .current-time-row {
-		margin: 2px;
-		font-weight: bold;
+	margin: 2px;
+	font-weight: bold;
 	text-align: center;
 }
 
