--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -21,9 +21,8 @@
 	th:href="@{https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css}" />
 <link rel="stylesheet"
 	th:href="@{https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.4/sweetalert2.min.css}" />
-<link rel="stylesheet"
-	th:href="@{http://fonts.googleapis.com/css?family=Open+Sans}"
-	type="text/css" />
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"/> 
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"/> 
 <!-- Global Site Tag (gtag.js) - Google Analytics -->
 <script async="async"
 	src="https://www.googletagmanager.com/gtag/js?id=UA-40696634-2"></script>
