--- a/src/main/resources/templates/blog/index.html
+++ b/src/main/resources/templates/blog/index.html
@@ -111,15 +111,12 @@
 						</div>
 					</div>
 				</div>
+				<!-- categories ends -->
+				<!-- affiliate link starts -->
+				<div th:include="affiliateLink :: affiliate-right-sidebar"></div>
+				<!-- affiliate link ends -->
 			</div>
-			<!-- categories ends -->
 		</div>
 	</div>
-	<!-- 
-	<footer class="footer">
-		<div class="container">
-			<div layout:fragment="custom-footer"></div>
-		</div>
-	</footer> -->
 </body>
 </html>
