--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -153,7 +153,9 @@
 					</div>
 				</div>
 				<!-- categories ends -->
-
+				<!-- affiliate link starts -->
+					<div th:include="affiliateLink :: affiliate-right-sidebar"></div>
+				<!-- affiliate link ends -->
 			</div>
 		</div>
 	</div>
